--- a/LoCyanFrpDesktop/Dashboard/Settings.xaml
+++ b/LoCyanFrpDesktop/Dashboard/Settings.xaml
@@ -18,7 +18,7 @@
             CornerRadius="8">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="80"/>
+                    <RowDefinition Height="auto"/>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="65"/>
                     
@@ -48,7 +48,7 @@
                                 Content="选择文件"
                                 Icon="OpenFolder24"/>
                         </Grid>
-                        
+                        <ui:Button Name="SignOut" Margin="0,10" Icon="ArrowExit20" Content="退出登录" Click="SignOut_Click"/>
                     </StackPanel>
                     
                 </Grid>
