--- a/LoCyanFrpDesktop/MainWindow.xaml
+++ b/LoCyanFrpDesktop/MainWindow.xaml
@@ -61,7 +61,7 @@
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="auto" MinWidth="300"/>
+                <ColumnDefinition Width="300"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid Grid.Column="1" >
